# pasko

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: compiler-internals.md
pasko-analysis/: Cargo.toml
pasko-analysis/src/: lib.rs  programpoints.rs  visitor.rs
pasko-codegen/: Cargo.toml
pasko-codegen/src/: codegen.rs  datalocation.rs  debuginfo.rs  function.rs  lib.rs  program.rs  runtime.rs
pasko-driver/: Cargo.toml
pasko-driver/src/: diagnostics.rs  main.rs
pasko-frontend/: Cargo.toml
pasko-frontend/src/: ast.rs  constant.rs  diagnostics.rs  dump.rs  lexer.rs  lib.rs  limits.rs  parser.rs  pasko.lalrpop  scope.rs  semantic.rs  span.rs  symbol.rs  typesystem.rs  utils.rs  visitor.rs
pasko-frontend/tests/: ast.rs  common.rs  semantic.rs
pasko-fuzzing/: Cargo.toml  fuzz.sh
pasko-fuzzing/src/: main.rs
pasko-runtime/: .gitignore  meson.build  pasko_error.c  pasko_init.c  pasko_internal.h  pasko_io.c  pasko_math.c  pasko_mem.c  pasko_runtime.c  pasko_runtime.h  pasko_set.c  pasko_string.c
pasko-testing/: Cargo.toml
pasko-testing/tests/: standard-test-moore.rs  testsuite.rs
pasko-testing/testsuite/: lit.site.cfg
pasko-testing/testsuite/Codegen/: array-01.pas  array-02.pas  array-03.pas  array-04.pas  call-function.pas  char.pas  conformable-array-01.pas  conformable-array-02.pas  conformable-array-03.pas  empty.pas  eof-eoln-01.pas  file-01.pas  file-02.pas  global-var.pas  goto-01.pas  local-var.pas  nested-function-01.pas  nested-function-02.pas  pass-by-ref.pas  pass-by-value-01.pas  pass-by-value-02.pas  pointer-01.pas  pointer-02.pas  put-get-01.pas  read-01.pas  readln-01.pas  record-01.pas  record-02.pas  record-03.pas  record-04.pas  record-05.pas  record-06.pas  required-01.pas  set-01.pas  set-02.pas  set-03.pas  set-04.pas  with-01.pas  write-01.pas  write-02.pas  (+1 more)
pasko-testing/testsuite/Parse/: basic-expressions.pas  case-stmt-semicolon.pas  case-stmt.pas  constants.pas  control-statements.pas  empty-program.pas  empty-statement.pas  function.pas  functions-procedures.pas  procedure.pas  type-definition.pas  types.pas  variable-declaration.pas  variable.pas  wrong-order.pas
pasko-testing/testsuite/Semantic/: basic.pas  conformable-2.pas  conformable.pas  enumerator.pas  forward-01.pas  forward-02.pas  forward-03.pas  generic-set-01.pas  goto-01.pas  goto-02.pas  pointer-01.pas  pointer-02.pas  record.pas  required.pas  subrange.pas  type-alias.pas  type-recursion.pas
