[package]
name = "pasko-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-frontend = "0.104.0"
cranelift-codegen = { version = "0.104.0", features = ["x86", "arm64", "riscv64", "trace-log"] }
cranelift-object = "0.104.0"
cranelift-module = "0.104.0"
cranelift-entity = "0.104.0"
pasko-frontend = { path = "../pasko-frontend" }
