[package]
name = "pasko-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasko-frontend = { path = "../pasko-frontend" }
pasko-codegen = { path = "../pasko-codegen" }

[[test]]
name = "testsuite"
harness = false

[[test]]
name = "standard-test-moore"
harness = false
